Address feedback and fix not valid after spacing

--- a/ui/app/styles/core/helpers.scss
+++ b/ui/app/styles/core/helpers.scss
@@ -153,6 +153,9 @@
 .has-padding-m {
   padding: $spacing-m;
 }
+.has-padding-xs {
+  padding: $spacing-xs;
+}
 .has-top-bottom-margin {
   margin: 1.25rem 0rem;
 }
